--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="all-tasks">
         <h2 class="task-list-title">My list</h2>
         <ul class="task-list">
-            <li class="list-name active-list">Youtube</li>
-            <li class="list-name">Work</li>
-            <li class="list-name">Grocery</li>
+            <li class="active-list">Youtube</li>
+            <li class=>Work</li>
+            <li class=>Grocery</li>
         </ul>
 
         <form action="">
@@ -28,7 +28,7 @@
                 placeholder="new list name"
                 aria-label="new list name"
             />
-            <button class="btn create" aria-label="create new list">+</button>
+            <button class="btn list" aria-label="create new list">+</button>
 
         </form>
 
@@ -90,16 +90,16 @@
                 <form action="">
                     <input 
                         type="text"
-                        class="new task"
+                        class="new list"
                         placeholder="new task name"
                         aria-label="new task name"
                     />
-                    <button class="btn create" aria-label="create new task">+</button>
+                    <button class="btn task" aria-label="create new task">+</button>
                 </form>
 
             </div>
 
-            <div class="delete-stuff">
+            <div class="div-delete-stuff">
 
                 <button class="btn delete">Clear completed tasks</button>
                 <button class="btn delete">Delete list</button>
