--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="all-tasks">
         <h2 class="task-list-title">My list</h2>
         <ul class="task-list" data-lists>
-            <li class="list-name active-list"></li>
+            <!-- <li class="list-name active-list"></li>
             <li class="list-name">Work</li>
-            <li class="list-name">Grocery</li>
+            <li class="list-name">Grocery</li> -->
         </ul>
 
         <form action="" data-new-list-form>
@@ -35,19 +35,14 @@
 
     </div>
 
-    <div class="todo-list">
-
+    <div class="todo-list" data-list-display-container>
         <div class="todo-header">
-
-            <h2 class="list-title">Youtube</h2>
-            <p class="task-count">3 tasks remaining</p>
-
+            <h2 class="list-title" data-list-title>Youtube</h2>
+            <p class="task-count" data-list-count>3 tasks remaining</p>
         </div>
 
         <div class="todo-body">
-
-            <div class="tasks">
-
+            <div class="tasks" data-tasks>
                 <div class="task">
                     <input 
                         type="checkbox"
@@ -83,11 +78,9 @@
                     </label>
                 </div>
                 <!-- Task 3 -->
-
             </div>
 
             <div class="new-task-creator">
-
                 <form action="">
                     <input 
                         type="text"
@@ -97,18 +90,13 @@
                     />
                     <button class="btn create" aria-label="create new task">+</button>
                 </form>
-
             </div>
 
             <div class="delete-stuff">
-
                 <button class="btn delete">Clear completed tasks</button>
-                <button class="btn delete">Delete list</button>
-
+                <button class="btn delete" data-delete-list-button>Delete list</button>
             </div>
-
         </div>
-
     </div>
 </body>
 </html>
