--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
 
     <div class="all-tasks">
         <h2 class="task-list-title">My list</h2>
-        <ul class="task-list" data-lists>
-            <!-- <li class="list-name active-list"></li>
-            <li class="list-name">Work</li>
-            <li class="list-name">Grocery</li> -->
-        </ul>
-
+        <ul class="task-list" data-lists></ul>
         <form action="" data-new-list-form>
-            
             <input 
                 type="text"
                 class="new list"
@@ -30,9 +24,7 @@
                 aria-label="new list name"
             />
             <button class="btn create" aria-label="create new list">+</button>
-
         </form>
-
     </div>
 
     <div class="todo-list" data-list-display-container>
@@ -42,49 +34,14 @@
         </div>
 
         <div class="todo-body">
-            <div class="tasks" data-tasks>
-                <div class="task">
-                    <input 
-                        type="checkbox"
-                        id="task-1"
-                    />
-                    <label for="task-1" >
-                        <span class="custom-checkbox"></span>
-                        building todo list 1
-                    </label>
-                </div>
-                <!-- Task 1 -->
-
-                <div class="task">
-                    <input 
-                        type="checkbox"
-                        id="task-2"
-                    />
-                    <label for="task-2" >
-                        <span class="custom-checkbox"></span>
-                        building todo list 2
-                    </label>
-                </div>
-                <!-- Task 2 -->
-
-                <div class="task">
-                    <input 
-                        type="checkbox"
-                        id="task-3"
-                    />
-                    <label for="task-3" >
-                        <span class="custom-checkbox"></span>
-                        building todo list 3
-                    </label>
-                </div>
-                <!-- Task 3 -->
-            </div>
+            <div class="tasks" data-tasks></div>
 
             <div class="new-task-creator">
-                <form action="">
+                <form action="" data-new-task-form>
                     <input 
                         type="text"
                         class="new task"
+                        data-new-task-input
                         placeholder="new task name"
                         aria-label="new task name"
                     />
@@ -93,10 +50,20 @@
             </div>
 
             <div class="delete-stuff">
-                <button class="btn delete">Clear completed tasks</button>
+                <button class="btn delete" data-clear-complete-tasks-button>Clear completed tasks</button>
                 <button class="btn delete" data-delete-list-button>Delete list</button>
             </div>
         </div>
     </div>
+    <template id="task-template">
+        <div class="task">
+            <input 
+                type="checkbox"
+            />
+            <label>
+                <span class="custom-checkbox"></span>
+            </label>
+        </div>
+    </template>
 </body>
 </html>
